fix albumPopup div on IE6 (arg)
git-svn-id: file:///home/awy/mirror/slim/trunk/server@17799 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/skin.css
+++ b/HTML/Fishbone/skin.css
@@ -957,7 +957,7 @@ div#albumPopup {
 	top: 10%;
 	left: 15%;
 	width: 70%;
-	max-height: 70%;
+	max-height: 75%;
 	background-color: black;
 	color: white;
 	padding: 5px;
